# swarbs-home

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml
config/: avahi-swarbs-home.service  swarbs-home.conf.example  swarbs-home.service
src/swarbs_home/: __init__.py  __main__.py  app.py  config.py  player.py  recorder.py
src/swarbs_home/static/: styles.css
src/swarbs_home/templates/: index.html  recorder.html
